--- a/cou.css
+++ b/cou.css
@@ -1,4 +1,4 @@
-body {
+/* body {
     font-family: 'Raleway', sans-serif;
     background: whitesmoke;
 }
@@ -30,4 +30,4 @@ h2 {
 .btn:hover {
     background: lightblue;
     cursor: pointer;
-}
+} */
