--- a/cou.css
+++ b/cou.css
@@ -31,3 +31,45 @@ h2 {
     background: lightblue;
     cursor: pointer;
 } */
+body {
+    background: #F1F5F9;
+}
+.underline {
+    text-decoration: underline;
+    text-decoration-color: lightseagreen;
+    text-align: center;
+    margin: 10rem;
+}
+ .underline ::after{
+    height: 2px;
+    width: 20px;
+    bottom: -5px;
+    position: absolute;
+ }
+ .image-container {
+    border: 0px solid;
+    text-align: center;
+    margin: 0 auto;
+    background: white;
+    padding: 10px;
+    border-radius: 5px;
+    box-shadow: #F1F5F9;
+    width: 70%;
+ }
+ #img {
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+ }
+ #job {
+    color: rgb(0, 174, 255);
+ }
+ .random {
+    color: rgb(0, 174, 255);
+    padding: 1px;
+    width: 100px;
+    height: 34px;
+    border-radius: 8px;
+    font-size: 15px;
+    border-color: rgb(0, 174, 255);
+ }
