--- a/cou.css
+++ b/cou.css
@@ -73,3 +73,10 @@ body {
     font-size: 15px;
     border-color: rgb(0, 174, 255);
  }
+ .btn {
+    padding: 2px;
+    color: aqua;
+    border-color: rgb(0, 174, 255);
+ }
+
+ 
