--- a/cou.css
+++ b/cou.css
@@ -31,7 +31,10 @@ h2 {
     background: lightblue;
     cursor: pointer;
 } */
-body {
+
+
+
+/* body {
     background: #F1F5F9;
 }
 .underline {
@@ -79,4 +82,83 @@ body {
     border-color: rgb(0, 174, 255);
  }
 
+  */
+
+
+  nav {
+    background: #F1F5F9;
+    box-shadow: #F1F5F7;
+  }
+  .nav-header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 1rem;
+  }
  
+  .nav-toggle:hover {
+    color: var(--clr-primary-1);
+    transform: rotate(90deg);
+  }
+  .logo {
+    height: 40px;
+  }
+  .links a {
+    color: lightslategray;
+    font-size: 1.5rem;
+    text-transform: uppercase;
+    letter-spacing: var(--spacing);
+    display: flex;
+    padding: 0.5rem 1rem;
+    transition: var(--transition);
+    text-decoration: none;
+  
+  }
+  ul {
+    list-style: none;
+  }
+  .links a:hover {
+    background: lightgrey;
+    color: lightblue;
+    padding-left: 1.5rem;
+  }
+  .social-icons {
+    display: none;
+  }
+  .links {
+    height: 0;
+    overflow: hidden;
+    transition: var(--transition);
+  }
+  .show-links {
+    height: 10rem;
+  }
+  @media screen and (min-width: 800px) {
+    .nav-center {
+      max-width: 1170px;
+      margin: 0 auto;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding: 1rem;
+    }
+    .nav-header {
+      padding: 0;
+    }
+    .nav-toggle {
+      display: none;
+    }
+    .links {
+      height: auto;
+      display: flex;
+    }
+    .links a {
+      padding: 0;
+      margin: 0 0.5rem;
+    }
+    .links a:hover {
+      padding: 0;
+      background: transparent;
+    }
+    
+  }
